[package]
name = "samvadsetu"
version = "0.1.1"
edition = "2021"
description = "Simple LLM API for commonly used LLM services including Gemini, ChatGPT, and Ollama. The name implies a bridge for dialogue since the library facilitates communication and interaction between a programs logic and the large language models capabilities. The sanskrit word saṃvāda (संवाद) refers to dialogue, and setu (सेतु) means bridge."
repository = "https://github.com/sandeep-sandhu/samvadsetu"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sandeep-sandhu/sandeep-sandhu"
documentation = "https://docs.rs/samvadsetu"
keywords = ["LLMs", "Language_Models", "API", "gemini", "ollama"]
categories = ["command-line-utilities", "command-line-interface", "text-processing"]
readme = "README.md"

[lib]
name = "samvadsetu"
path = "src/lib.rs"
crate-type = ["lib"]

#[[bin]]
#name="samvadsetu"
#path = "src/bin.rs"

[dependencies]
log4rs = { version = "1.3.0", features = ["gzip"]}
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls", "blocking", "http2", "cookies", "gzip"] }
config = "0.15.6"
rand = "0.9.0-beta.3"
